# simple-gen

./: pyproject.toml
simple_gen/: generate.py  main.py  utils.py
simple_gen/internal/: collector.py  generator.py
simple_gen/templates/python/asyncio/: rest.mustache
simple_gen/templates/tests/: conftest.jinja2
simple_gen/utils/: download.py  generate.py  utils.py
